--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -171,7 +171,7 @@ jobs:
               --workdir /typeorm \
               --name typeorm-testrunner \
               circleci/node:<< parameters.node-version >> \
-              npx nyc npm run test-fast
+              npx nyc npm run test
 
             docker cp typeorm-testrunner:/typeorm/coverage/ ./
       - run:
