--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "source-map-support": "^0.5.19",
     "sql.js": "^1.4.0",
     "sqlite3": "^5.0.2",
+    "ts-mocha": "^8.0.0",
     "ts-node": "^9.1.1",
     "typeorm-aurora-data-api-driver": "^2.0.0",
     "typescript": "^4.2.2"
@@ -213,8 +214,7 @@
   },
   "scripts": {
     "test-ci": "gulp ci-tests",
-    "test": "rimraf ./build && tsc && mocha --file ./build/compiled/test/utils/test-setup.js --bail --recursive --timeout 60000 ./build/compiled/test",
-    "test-fast": "mocha --file ./build/compiled/test/utils/test-setup.js --bail --recursive --timeout 60000 ./build/compiled/test",
+    "test": "ts-mocha --file ./test/utils/test-setup.ts --bail --recursive --timeout 60000 --extension ts ./test",
     "compile": "rimraf ./build && tsc",
     "watch": "./node_modules/.bin/tsc -w",
     "package": "gulp package",
